update content remove feature cards sections

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,89 +1,72 @@
 {
+  "header_login": "Login",
 
-   "header_login": "Login",
+  "hero_title": "Create Free QR Menu",
+  "hero_subtitle": "Take Orders from Tables",
+  "hero_description": "Offer your customers a contactless, fast, and modern ordering experience. Digitize your business with a QR menu and simplify your order and restaurant management processes.",
+  "hero_cta_button": "Create for Free",
+  "hero_sample_button": "Sample Menu",
 
-   "hero_title":  "Create Free QR Menu",
-   "hero_subtitle": "Take orders from tables",
-   "hero_description": "Provide your customers with a contactless, fast, and modern ordering experience. Digitize your business with a QR menu and simplify your order and restaurant management processes.",
-   "hero_cta_button": "Create For Free",
-   "hero_sample_button": "Sample Menu",
-   
-   "features_subtitle": "Features",
-   "features_title": "Everything You Need to Manage Your QR Menu and Restaurant",
-   "features_description": "Digitize your restaurant, simplify orders, and manage your operations with a modern system",
-   "feature_1_title": "QR Menu",
-   "feature_1_description": "Customers can quickly view your menu and place orders by scanning the QR code with their mobile devices",
-   "feature_2_title": "Order Management",
-   "feature_2_description": "Easily manage your orders, send them to the kitchen, and track the process",
-   "feature_3_title": "Table Tracking",
-   "feature_3_description": "Track which table placed the order in real-time with separate QR codes for each table",
-   "feature_4_title": "Product and Menu Management",
-   "feature_4_description": "Easily add products, categorize them, and update your menu in real-time",
-   "feature_5_title": "Reporting and Analytics",
-   "feature_5_description": "Easily analyze your daily sales, product performance, and order trends",
-   "feature_6_title": "Staff and Access Control",
-   "feature_6_description": "Define separate authorizations for different roles such as waiter, kitchen, and manager",
+  "highlight_1_subtitle": "Fast Orders",
+  "highlight_1_title": "Take Orders from Tables with QR Menu",
+  "highlight_1_description": "Your guests can instantly access your menu by scanning the QR code as soon as they sit down, without downloading any app. Thanks to its user-friendly interface, they can easily browse products, choose options, and send their orders directly. This reduces the need for waiters and significantly shortens the order-taking process. It’s indispensable for reducing service load and increasing customer satisfaction during busy hours.",
 
-   "highlight_1_subtitle": "Digital Convenience",
-   "highlight_1_title": "QR Menu for Instant Ordering",
-   "highlight_1_description": "Let your customers instantly access your menu by simply scanning a QR code. Eliminate printed menus, reduce wait times, and offer a fast, contactless ordering experience right from their mobile devices.",
+  "highlight_2_subtitle": "Easy Bill Management",
+  "highlight_2_title": "Track Orders and Payments",
+  "highlight_2_description": "Each table's bill is tracked live. Products added by customers or waiters instantly reflect on the bill. Cashiers can accept payments using various methods like cash, credit card, or meal vouchers when closing the order. You can also split bills by person, merge or transfer tables with ease. This system reduces internal errors and speeds up the payment process.",
 
-   "highlight_2_subtitle": "Effortless Management",
-   "highlight_2_title": "Real-Time Order Tracking",
-   "highlight_2_description": "Receive and manage orders as they’re placed, with real-time updates and clear order status flows. Kitchen staff and waiters can see and respond to orders instantly, ensuring efficient service and fewer errors.",
+  "highlight_3_subtitle": "Detailed Statistics",
+  "highlight_3_title": "Evaluate Performance with Detailed Reports",
+  "highlight_3_description": "Track your sales, product performance, and payment methods in real time. With advanced analytics screens, you can access insights like which product sells the most, your peak hours, and how much each table spent. These insights help you make informed decisions as you grow your business. Get weekly, monthly, and yearly reports with a single click.",
 
-   "highlight_3_subtitle": "Total Control",
-   "highlight_3_title": "Dynamic Menu and Product Editing",
-   "highlight_3_description": "Easily create, update, and organize products and categories with a few clicks. Whether you're adding new dishes or updating prices, your digital menu is always current and accessible to your customers.",
+  "highlight_4_subtitle": "Live Kitchen Screen",
+  "highlight_4_title": "Send Orders Instantly to the Kitchen",
+  "highlight_4_description": "Orders are instantly sent to the kitchen screen. Details like which product was ordered when, and which table ordered what are clearly displayed for kitchen staff. This reduces order mistakes, speeds up preparation, and ensures a smoother service flow.",
 
-   "highlight_4_subtitle": "Insights That Matter",
-   "highlight_4_title": "Reports and User Access Management",
-   "highlight_4_description": "Track your business performance with detailed sales reports and order statistics. Define roles for your team with permission controls, from waiters to managers, ensuring the right people see the right data.",
+  "pricing_subtitle": "Pricing",
+  "pricing_title": "Start Free - Upgrade Anytime",
+  "pricing_description": "Create your QR menu for free, and switch to the Professional plan anytime for more advanced features.",
 
-   "pricing_subtitle": "Pricing",
-   "pricing_title": "Affordable Plans to Grow Your Business",
-   "pricing_description": "Create and manage your QR menu with our plans tailored to your business needs",
+  "pricing_free_title": "Basic",
+  "pricing_free_description": "For beginners — create and manage a QR menu",
+  "pricing_free_price": "Free",
 
-   "pricing_free_title": "Basic",
-   "pricing_free_description": "Ideal for beginners, basic features",
-   "pricing_free_price": "Free",
+  "pricing_pro_title": "Professional",
+  "pricing_pro_description": "Advanced features like table ordering and bill tracking",
+  "pricing_pro_price_discount": "₺1000",
+  "pricing_pro_price": "₺750",
+  "pricing_pro_month": "month",
 
-   "pricing_pro_title": "Professional",
-   "pricing_pro_description": "Advanced features and more control",
-   "pricing_pro_price_discount": "$20",
-   "pricing_pro_price": "$15",
-   "pricing_pro_month": "month",
-
-   "pricing_feature_1": "Unlimited product and category additions",
-   "pricing_feature_2": "Unlimited table and QR code creation",
-   "pricing_feature_3": "Product features and options",
-   "pricing_feature_4": "Menu theme and color customization",
-   "pricing_feature_5": "Order taking from tables via QR code",
+   "pricing_feature_1": "Add unlimited products and categories",
+   "pricing_feature_2": "Create unlimited tables and QR codes",
+   "pricing_feature_3": "Product options and variants",
+   "pricing_feature_4": "Customize menu theme and colors",
+   "pricing_feature_5": "Take table orders via QR codes",
    "pricing_feature_6": "Order management and kitchen integration",
-   "pricing_feature_7": "Account management and payment tracking",
+   "pricing_feature_7": "Bill management and payment tracking",
    "pricing_feature_8": "Detailed reporting and statistics",
-   "pricing_feature_9": "Unlimited user and permission management",
+   "pricing_feature_9": "Unlimited users and role management",
+   "pricing_feature_all": "All features available in the free plan",
 
-   "faq_subtitle": "FAQ",
-   "faq_title": "Frequently Asked Questions",
-   
-   "faq_1_q": "Is the Basic plan really free?",
-   "faq_1_a": "Yes, the Basic plan is completely free and includes core features like menu setup, QR code generation, and basic order tracking.",
-   "faq_2_q": "What is a QR Menu and how does it work?",
-   "faq_2_a": "A QR Menu allows your customers to scan a QR code with their mobile devices to instantly view your restaurant’s menu and place orders without needing physical menus or staff intervention.",
-   "faq_3_q": "Can I customize the menu design and colors?",
-   "faq_3_a": "Yes, with the Professional plan you can fully customize the menu theme and colors to match your brand identity.",
-   "faq_4_q": "Is there a limit to how many products or tables I can add?",
-   "faq_4_a": "No, you can add unlimited products, categories, and tables in both the Basic and Professional plans.",
-   "faq_5_q": "How do QR orders get sent to the kitchen?",
-   "faq_5_a": "Orders placed via QR code are instantly sent to the kitchen panel, allowing staff to view and prepare orders in real-time.",
-   "faq_6_q": "Can I assign different roles to my staff?",
-   "faq_6_a": "Absolutely. You can assign roles like waiter, kitchen staff, or manager, each with custom access permissions.",
+  "faq_subtitle": "FAQ",
+  "faq_title": "Frequently Asked Questions",
 
-   "blog_title": "Blog",
-   "blog_description": "Explore our newest updates and latest blog posts.",
+  "faq_1_q": "Is the Basic plan really free?",
+  "faq_1_a": "Yes, the Basic plan is completely free and includes core features like menu creation, QR code generation, and basic order tracking.",
+  "faq_2_q": "What is a QR Menu and how does it work?",
+  "faq_2_a": "A QR Menu is a contactless digital menu system where your customers can instantly view your menu and place orders by scanning a QR code with their mobile devices.",
+  "faq_3_q": "Can I customize the menu design and colors?",
+  "faq_3_a": "Yes, with the Professional plan, you can fully customize your menu’s theme and colors to match your brand.",
+  "faq_4_q": "Is there a limit to how many products or tables I can add?",
+  "faq_4_a": "No, both the Basic and Professional plans allow you to add unlimited products, categories, and tables.",
+  "faq_5_q": "How are orders submitted via QR sent to the kitchen?",
+  "faq_5_a": "Orders placed via QR codes are instantly sent to the kitchen panel and can be viewed by kitchen staff in real-time.",
+  "faq_6_q": "Can I assign different roles to my staff?",
+  "faq_6_a": "Absolutely. You can define roles like waiter, kitchen staff, or manager and assign specific permissions to each role.",
 
-   "menu_legal": "Legal",
-   "menu_features": "Features"
+  "blog_title": "Blog",
+  "blog_description": "Discover our latest news and updates.",
+
+  "menu_legal": "Legal",
+  "menu_features": "Features"
 }
-
