--- a/i18n/tr.json
+++ b/i18n/tr.json
@@ -8,48 +8,32 @@
    "hero_cta_button": "Ücretsiz Oluştur",
    "hero_sample_button": "Örnek Menü",
 
-   "features_subtitle": "Özellikler",
-   "features_title": "QR Menü ve Restoranınızı Yönetmek İçin İhtiyacınız Olan Her Şey",
-   "features_description": "Restoranınızı dijitalleştirin, siparişleri kolaylaştırın ve operasyonlarınızı modern bir sistemle yönetin",
-   "feature_1_title": "QR Menü",
-   "feature_1_description": "Müşterileriniz QR kodu okutarak menünüzü mobil cihazlarında hızlıca görüntüleyebilir ve sipariş verebilir",
-   "feature_2_title": "Sipariş Yönetimi",
-   "feature_2_description": "Siparişlerinizi kolayca yönetin, mutfağa aktarın ve süreci takip edin",
-   "feature_3_title": "Masa Takibi",
-   "feature_3_description": "Her masa için ayrı QR kodlar ile hangi masadan sipariş verildiğini anlık olarak takip edin",
-   "feature_4_title": "Ürün ve Menü Yönetimi",
-   "feature_4_description": "Kolayca ürün ekleyin, kategorilere ayırın ve menünüzü gerçek zamanlı olarak güncelleyin",
-   "feature_5_title": "Raporlama ve Analitik",
-   "feature_5_description": "Günlük satışlarınızı, ürün performansını ve sipariş trendlerini kolayca analiz edin",
-   "feature_6_title": "Personel ve Erişim Kontrolü",
-   "feature_6_description": "Garson, mutfak ve yönetici gibi farklı roller için ayrı yetkilendirmeler tanımlayın",
+   "highlight_1_subtitle": "Hızlı siparişler",
+   "highlight_1_title": "QR Menü ile masalardan sipariş al",
+   "highlight_1_description": "Misafirleriniz masaya oturdukları anda QR kodu okutarak menünüze ulaşabilir, hiçbir uygulama indirmeden anında sipariş verebilirler. Kullanıcı dostu arayüzü sayesinde ürünleri kolayca inceleyebilir, seçenekleri belirleyip doğrudan sipariş gönderebilirler. Bu sayede hem garson ihtiyacı azalır hem de sipariş alma süresi ciddi şekilde kısalır. Özellikle yoğun saatlerde servis yükünü hafifletmek ve müşteri memnuniyetini artırmak için vazgeçilmezdir.",
 
-   "highlight_1_subtitle": "Dijital Kolaylık",
-   "highlight_1_title": "Anında Sipariş için QR Menü",
-   "highlight_1_description": "Müşterileriniz yalnızca bir QR kodu okutarak menünüze anında erişebilir. Basılı menülere son verin, bekleme sürelerini azaltın ve mobil cihazlardan hızlı, temassız bir sipariş deneyimi sunun.",
+   "highlight_2_subtitle": "Kolay Adisyon Yönetimi",
+   "highlight_2_title": "Adisyonlarını ve ödemelerini takip et",
+   "highlight_2_description": "Her masanın hesabı canlı olarak takip edilir. Müşteriler veya garsonlar tarafından eklenen ürünler anında adisyona yansır. Kasiyerler, siparişi kapatırken nakit, kredi kartı, yemek kartı gibi farklı ödeme yöntemleriyle tahsilat yapabilir. Ayrıca parçalı ödeme, kişi başı hesap bölme, birleştirme veya masalar arası aktarım gibi işlemler de kolayca yapılabilir. Bu sistem, hem işletme içi hataları azaltır hem de ödeme sürecini hızlandırır.",
 
-   "highlight_2_subtitle": "Kolay Yönetim",
-   "highlight_2_title": "Gerçek Zamanlı Sipariş Takibi",
-   "highlight_2_description": "Siparişleri anında alın ve yönetin, güncel durumları gerçek zamanlı olarak izleyin. Mutfak ve garson ekipleri siparişleri anında görebilir, hızlı ve hatasız hizmet sağlayabilir.",
+   "highlight_3_subtitle": "Ayrıntılı İstatistikler",
+   "highlight_3_title": "Detaylı raporlar ile performansını değerlendir",
+   "highlight_3_description": "İşletmenizin satışlarını, ürün performansını ve ödeme yöntemlerini anlık olarak takip edin. Gelişmiş analiz ekranları sayesinde hangi ürünün ne kadar satıldığını, en yoğun saatlerinizi, hangi masa ne kadar harcama yapmış gibi detaylara ulaşabilirsiniz. Bu veriler, işletmenizin büyümesini planlarken doğru kararlar almanıza yardımcı olur. Haftalık, aylık ve yıllık raporları tek tıkla alın.",
 
-   "highlight_3_subtitle": "Tam Kontrol",
-   "highlight_3_title": "Dinamik Menü ve Ürün Düzenleme",
-   "highlight_3_description": "Ürünleri ve kategorileri kolayca oluşturun, güncelleyin ve yönetin. Yeni yemekler ekleyin veya fiyatları değiştirin; menünüz anında güncellenir ve müşterilere sunulur.",
+   "highlight_4_subtitle": "Canlı Mutfak Ekranı",
+   "highlight_4_title": "Siparişlerini anında mutfağına aktar",
+   "highlight_4_description": "Siparişler anında mutfak ekranına düşer. Hangi ürün ne zaman sipariş edildi, hangi masa hangi yemeği istedi gibi detaylar mutfak personelinin önünde net şekilde görünür. Bu sayede yanlış siparişlerin önüne geçilir, hazırlık süreci hızlanır ve servis akışı daha düzenli hale gelir.",
 
-   "highlight_4_subtitle": "Önemli Veriler",
-   "highlight_4_title": "Raporlama ve Yetkilendirme Yönetimi",
-   "highlight_4_description": "İş performansınızı satış raporları ve sipariş istatistikleriyle analiz edin. Garsondan yöneticiye kadar farklı roller tanımlayarak ekip üyelerine uygun yetkiler atayın.",
-
-   "pricing_subtitle": "Fiyatlar",
-   "pricing_title": "İşletmenizi Büyütmek İçin Uygun Fiyatlı Planlar",
-   "pricing_description": "İşletmenizin ihtiyaçlarına uygun planlarımızla QR menünüzü oluşturun ve yönetin",
+   "pricing_subtitle": "Fiyatlandırma",
+   "pricing_title": "Ücretsiz başla - Dilediğinde yükselt",
+   "pricing_description": "QR Menünü ücretsiz bir şekilde oluşturabilir, daha fazla gelişmiş özellik için Profesyonel plana istediğin zaman geçebilirsin.",
    
    "pricing_free_title": "Temel",
-   "pricing_free_description": "Yeni başlayanlar için ideal, temel özellikler",
+   "pricing_free_description": "Yeni başlayanlar için, QR menü oluşturma ve yönetme",
    "pricing_free_price": "Ücretsiz",
 
    "pricing_pro_title": "Profesyonel",
-   "pricing_pro_description": "Gelişmiş özellikler ve daha fazla kontrol",
+   "pricing_pro_description": "Masadan sipariş, adisyon takibi gibi gelişmiş özellikler",
    "pricing_pro_price_discount": "1000₺",
    "pricing_pro_price": "750₺",
    "pricing_pro_month": "ay",
@@ -59,10 +43,11 @@
    "pricing_feature_3": "Ürün özellikleri ve seçenekleri",
    "pricing_feature_4": "Menü teması ve renkleri özelleştirme",
    "pricing_feature_5": "QR kodu ile masalardan sipariş alma",
-   "pricing_feature_6": "Sipariş yönetimi ve mutfak entegrasyonu",
-   "pricing_feature_7": "Hesap yönetimi ve ödeme takibi",
+   "pricing_feature_6": "Sipariş takibi ve mutfak ekranı",
+   "pricing_feature_7": "Adisyon yönetimi ve ödeme takibi",
    "pricing_feature_8": "Detaylı raporlama ve istatistikler",
    "pricing_feature_9": "Sınırsız kullanıcı ve izin yönetimi",
+   "pricing_feature_all": "Ücretsiz planda bulunan tüm özellikler",
 
    "faq_subtitle": "SSS",
    "faq_title": "Sıkça Sorulan Sorular",
