add language selector to footer

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -68,5 +68,6 @@
   "blog_description": "Discover our latest news and updates.",
 
   "menu_legal": "Legal",
-  "menu_features": "Features"
+  "menu_features": "Features",
+  "menu_language": "Language"
 }
