--- a/i18n/tr.json
+++ b/i18n/tr.json
@@ -73,5 +73,6 @@
    "blog_description": "En yeni haberleri ve güncellemelerimizi keşfedin.",
 
    "menu_legal": "Yasal",
-   "menu_features": "Özellikler"
+   "menu_features": "Özellikler",
+   "menu_language": "Dil"
 }
