update turkish strings

--- a/i18n/tr.json
+++ b/i18n/tr.json
@@ -3,37 +3,37 @@
    "header_login": "Giriş",
 
    "hero_title": "Ücretsiz QR Menü oluştur",
-   "hero_subtitle": "Masalarından sipariş al",
-   "hero_description": "Müşterilerinize temassız, hızlı ve modern bir sipariş deneyimi sunun. QR menü ile işletmenizi dijitalleştirin, sipariş ve restoran yönetim süreçlerinizi kolaylaştırın",
-   "hero_cta_button": "Ücretsiz Oluştur",
+   "hero_subtitle": "Masadan sipariş al",
+   "hero_description": "Dijital menü ile müşterilerinize temassız, hızlı ve modern bir sipariş deneyimi sunun. İşletmenizin sipariş yönetim ve raporlama süreçlerini tek bir panelden yönetin.",
+   "hero_cta_button": "Ücretsiz Menü Oluştur",
    "hero_sample_button": "Örnek Menü",
 
-   "highlight_1_subtitle": "Hızlı siparişler",
+   "highlight_1_subtitle": "Anında Masadan Sipariş",
    "highlight_1_title": "QR Menü ile masalardan sipariş al",
-   "highlight_1_description": "Misafirleriniz masaya oturdukları anda QR kodu okutarak menünüze ulaşabilir, hiçbir uygulama indirmeden anında sipariş verebilirler. Kullanıcı dostu arayüzü sayesinde ürünleri kolayca inceleyebilir, seçenekleri belirleyip doğrudan sipariş gönderebilirler. Bu sayede hem garson ihtiyacı azalır hem de sipariş alma süresi ciddi şekilde kısalır. Özellikle yoğun saatlerde servis yükünü hafifletmek ve müşteri memnuniyetini artırmak için vazgeçilmezdir.",
+   "highlight_1_description": "Misafirleriniz hiçbir uygulama indirmeden QR kodu okutarak restoran menünüze anında ulaşabilir ve tüm akıllı telefonlarla uyumlu menü arayüzü sayesinde ürünleri sepete ekleyebilir, yemek siparişlerini doğrudan masadan verebilirler. Kare kod ile masadan sipariş özelliği, restoran operasyonlarını kolaylaştırır, servisi hızlandırır ve genel müşteri deneyimini iyileştirir.",
 
-   "highlight_2_subtitle": "Kolay Adisyon Yönetimi",
-   "highlight_2_title": "Adisyonlarını ve ödemelerini takip et",
-   "highlight_2_description": "Her masanın hesabı canlı olarak takip edilir. Müşteriler veya garsonlar tarafından eklenen ürünler anında adisyona yansır. Kasiyerler, siparişi kapatırken nakit, kredi kartı, yemek kartı gibi farklı ödeme yöntemleriyle tahsilat yapabilir. Ayrıca parçalı ödeme, kişi başı hesap bölme, birleştirme veya masalar arası aktarım gibi işlemler de kolayca yapılabilir. Bu sistem, hem işletme içi hataları azaltır hem de ödeme sürecini hızlandırır.",
+   "highlight_2_subtitle": "Restoran Adisyon Yönetimi",
+   "highlight_2_title": "Adisyonları ve ödemeleri yönet",
+   "highlight_2_description": "Adisyon takip sistemi ile müşteriler ya da garsonlar tarafından verilen siparişleri canlı olarak takip edebilirsiniz. Nakit, kredi kartı veya yemek kartı gibi farklı ödeme yöntemleri ile ödeme kayıtları oluşturabilir,  parçalı ödeme alabilir, masaları birleştirebilir veya aktarabilirsiniz.",
 
-   "highlight_3_subtitle": "Ayrıntılı İstatistikler",
-   "highlight_3_title": "Detaylı raporlar ile performansını değerlendir",
-   "highlight_3_description": "İşletmenizin satışlarını, ürün performansını ve ödeme yöntemlerini anlık olarak takip edin. Gelişmiş analiz ekranları sayesinde hangi ürünün ne kadar satıldığını, en yoğun saatlerinizi, hangi masa ne kadar harcama yapmış gibi detaylara ulaşabilirsiniz. Bu veriler, işletmenizin büyümesini planlarken doğru kararlar almanıza yardımcı olur. Haftalık, aylık ve yıllık raporları tek tıkla alın.",
+   "highlight_3_subtitle": "Detaylı İstatistikler",
+   "highlight_3_title": "QR Menü ve masa performansını ölçümle",
+   "highlight_3_description": "Restoran performansınızı ayrıntılı analizlerle izleyin. Toplam satışlar, gün sonu raporları, en çok satan ürünler, ödeme yöntemleri ve masa harcamalarını anında görüntüleyin. Yoğun saatlerinizi ve en iyi performans gösteren menü ürünlerinizi belirleyin. Haftalık, aylık ve yıllık satış raporları sayesinde işletmenizi büyütmek için veri odaklı kararlar alın.",
 
    "highlight_4_subtitle": "Canlı Mutfak Ekranı",
-   "highlight_4_title": "Siparişlerini anında mutfağına aktar",
-   "highlight_4_description": "Siparişler anında mutfak ekranına düşer. Hangi ürün ne zaman sipariş edildi, hangi masa hangi yemeği istedi gibi detaylar mutfak personelinin önünde net şekilde görünür. Bu sayede yanlış siparişlerin önüne geçilir, hazırlık süreci hızlanır ve servis akışı daha düzenli hale gelir.",
+   "highlight_4_title": "Siparişleri anında mutfağa aktar",
+   "highlight_4_description": "QR Menü üzerinden verilen siparişler doğrudan mutfak ekranına iletilir. Hangi ürünün, hangi masa tarafından ve ne zaman sipariş edildiği mutfak personeli tarafından görülür. Adisyonlar önceliklendirilir, hazırlık süreci hızlanır ve servis akışı mutfak yönetim ekranı üzerinden takip edilir.",
 
    "pricing_subtitle": "Fiyatlandırma",
-   "pricing_title": "Ücretsiz başla - Dilediğinde yükselt",
-   "pricing_description": "QR Menünü ücretsiz bir şekilde oluşturabilir, daha fazla gelişmiş özellik için Profesyonel plana istediğin zaman geçebilirsin.",
+   "pricing_title": "Hemen Ücretsiz Dijital QR Menü oluştur",
+   "pricing_description": "QR Menünü ücretsiz oluşturabilir, gelişmiş özellikler için profesyonel plana istediğin zaman geçebilirsin.",
    
    "pricing_free_title": "Temel",
-   "pricing_free_description": "Yeni başlayanlar için, QR menü oluşturma ve yönetme",
+   "pricing_free_description": "Ücretsiz QR menü oluşturma ve yönetme.",
    "pricing_free_price": "Ücretsiz",
 
    "pricing_pro_title": "Profesyonel",
-   "pricing_pro_description": "Masadan sipariş, adisyon takibi gibi gelişmiş özellikler",
+   "pricing_pro_description": "Masadan sipariş, adisyon yönetimi, çoklu dil desteği ve istatistikler",
    "pricing_pro_price_discount": "1000₺",
    "pricing_pro_price": "750₺",
    "pricing_pro_month": "ay",
@@ -42,32 +42,39 @@
    "pricing_feature_2": "Sınırsız masa ve QR kodu oluşturma",
    "pricing_feature_3": "Ürün özellikleri ve seçenekleri",
    "pricing_feature_4": "Menü teması ve renkleri özelleştirme",
-   "pricing_feature_5": "QR kodu ile masalardan sipariş alma",
-   "pricing_feature_6": "Sipariş takibi ve mutfak ekranı",
-   "pricing_feature_7": "Adisyon yönetimi ve ödeme takibi",
-   "pricing_feature_8": "Detaylı raporlama ve istatistikler",
-   "pricing_feature_9": "Sınırsız kullanıcı ve izin yönetimi",
+   "pricing_feature_5": "İşletmeye özel URL seçimi",
+   "pricing_feature_6": "QR kodu ile masalardan sipariş alma",
+   "pricing_feature_7": "Sipariş takibi ve mutfak ekranı",
+   "pricing_feature_8": "Adisyon yönetimi ve ödeme takibi",
+   "pricing_feature_9": "Detaylı raporlama ve istatistikler",
+   "pricing_feature_10": "Sınırsız kullanıcı ve izin yönetimi",
+   "pricing_feature_11": "Çoklu dil ekleme ve otomatik çeviri",
    "pricing_feature_all": "Ücretsiz planda bulunan tüm özellikler",
 
    "faq_subtitle": "SSS",
    "faq_title": "Sıkça Sorulan Sorular",
 
-   "faq_1_q": "Temel plan gerçekten ücretsiz mi?",
-   "faq_1_a": "Evet, Temel plan tamamen ücretsizdir ve menü oluşturma, QR kod üretimi ve temel sipariş takibi gibi temel özellikleri içerir.",
-   "faq_2_q": "QR Menü nedir ve nasıl çalışır?",
-   "faq_2_a": "QR Menü, müşterilerinizin mobil cihazlarıyla QR kodu tarayarak menünüzü anında görüntüleyip sipariş verebileceği temassız bir dijital menü sistemidir.",
+   
+   "faq_1_q": "QR Menü nedir ve nasıl çalışır?",
+   "faq_1_a": "QR Menü, müşterilerinizin mobil cihazlarıyla QR kodu tarayarak menünüzü anında görüntüleyip sipariş verebileceği temassız bir dijital menü sistemidir.",
 
-   "faq_3_q": "Menü tasarımını ve renklerini özelleştirebilir miyim?",
-   "faq_3_a": "Evet, Profesyonel plan ile menünüzün temasını ve renklerini markanıza uygun şekilde tamamen özelleştirebilirsiniz.",
+   "faq_2_q": "Ücretsiz QR Menü içerikleri nedir?",
+   "faq_2_a": "Ücretsiz dijital menü paketi ile sınırsız ürün kategorisi, ürün ve masa oluşturabilir, işletmenizin lokasyon bilgilerini, sosyal medya hesaplarını, çalışma saatlerini ve wi-fi bilgilerini menünüze ekleyebilirsiniz. Restorana özel URL kaydı yapabilir,  QR Menü temasını ve renklerini markanıza uygun şekilde düzenleyebilirsiniz. Garson çağır özelliği ile müşterileriniz kare kod menü üzerinden garson çağırabilirler.",
 
-   "faq_4_q": "Kaç ürün veya masa ekleyebilirim, bir sınır var mı?",
-   "faq_4_a": "Hayır, hem Temel hem de Profesyonel planlarda sınırsız ürün, kategori ve masa ekleyebilirsiniz.",
+   "faq_3_q": "Profesyonel QR Menü paketinin farkı nedir?",
+   "faq_3_a": "Profesyonel QR kod Menü planı ile masadan sipariş alır, adisyonlarınızı tek bir panelden takip eder, canlı mutfak yönetim paneli ile siparişleri yönetirsiniz. Detaylı satış raporları  ile işletmenizin menü, bölge ve masa performanlarını ölçer, gün sonu raporları alırsınız. Çoklu dil seçeneği ile QR menünüzü seçtiğiniz 5 farklı dilde otomatik çevirir, çalışanlarınıza kullanıcı rolleri belirleyebilirsiniz.",
 
-   "faq_5_q": "QR ile verilen siparişler mutfağa nasıl iletiliyor?",
-   "faq_5_a": "Müşterilerin QR kod ile verdiği siparişler anlık olarak mutfak paneline iletilir ve mutfak personeli tarafından anında görüntülenebilir.",
+   "faq_4_q": "Menü tasarımını ve renklerini özelleştirebilir miyim?",
+   "faq_4_a": "Evet, hem ücretsiz hem de pfe rofesyonel QR Menü planlarında  menünüzün temasını ve renklerini markanıza uygun şekilde tamamen özelleştirebilirsiniz.",
 
-   "faq_6_q": "Personelime farklı roller atayabilir miyim?",
-   "faq_6_a": "Elbette. Garson, mutfak çalışanı veya yönetici gibi roller tanımlayabilir ve her role özel yetkiler verebilirsiniz.",
+   "faq_5_q": "Kaç ürün veya masa ekleyebilirim. Sipariş sınır var mı?",
+   "faq_5_a": "Tüm planlarda sınırsız ürün, kategori ve masa ekleyebilirsiniz. Profesyonel Menü planında sınırsız sipariş alabilirsiniz.",
+
+   "faq_6_q": "QR Menüm işletmeme ait seçtiğim bir URL’de mi olacak?",
+   "faq_6_a": "Evet. Tüm planlarda kayıt işlemi sırasında işletmenize ait URL’yi kendiniz seçersiniz. Bir URL daha önce farklı bir işletme tarafında kullanıldıysa aynı URL’yi seçemezsiniz. QR Menünüz bu URL üzerinden müşterilerinize gösterilir.",
+
+   "faq_8_q": "Personelime farklı kullanıcı rolleri atayabilir miyim?",
+   "faq_8_a": "Profesyonel planda çalışanlarınıza garson, mutfak çalışanı veya yönetici gibi roller tanımlayabilir ve her role özel yetkiler verebilirsiniz.",
 
    "blog_title": "Blog",
    "blog_description": "En yeni haberleri ve güncellemelerimizi keşfedin.",
