fix international prices

--- a/i18n/es.json
+++ b/i18n/es.json
@@ -33,8 +33,8 @@
 
   "pricing_pro_title": "Profesional",
   "pricing_pro_description": "Pedidos desde mesa, gestión de cuentas, idiomas y estadísticas",
-  "pricing_pro_price_discount": "1000₺",
-  "pricing_pro_price": "750₺",
+  "pricing_pro_price_discount": "€30",
+  "pricing_pro_price": "€25",
   "pricing_pro_month": "mes",
 
   "pricing_feature_1": "Productos y categorías ilimitadas",
