--- a/i18n/en.json
+++ b/i18n/en.json
@@ -33,8 +33,8 @@
 
   "pricing_pro_title": "Professional",
   "pricing_pro_description": "Advanced features like table ordering and bill tracking",
-  "pricing_pro_price_discount": "₺1000",
-  "pricing_pro_price": "₺750",
+  "pricing_pro_price_discount": "$30",
+  "pricing_pro_price": "$25",
   "pricing_pro_month": "month",
 
    "pricing_feature_1": "Add unlimited products and categories",
